# ffc

./: CMakeLists.txt  FASTA_Compress.cpp  FASTA_Compress.h  FASTA_Decompress.cpp  FASTA_Decompress.h  README.md  ffc.cpp  ffc_structures.hpp  specification.md  version.hpp
example-scripts/: GCA_000585755.1_Lm1823_genomic.ffc  README.md  ex1.sh  ffc_decompressor.py
utils/: helper.cpp  helper.h
zstd/lib/common/: allocations.h  bitstream.h  error_private.h  fse.h  huf.h  mem.h  zstd_internal.h
zstd/lib/compress/: hist.h  zstd_compress_internal.h  zstd_compress_literals.h  zstd_compress_sequences.h  zstd_compress_superblock.h  zstd_cwksp.h  zstd_double_fast.h  zstd_fast.h  zstd_ldm.h  zstd_ldm_geartab.h  zstdmt_compress.h
zstd/lib/decompress/: zstd_ddict.h  zstd_decompress_block.h  zstd_decompress_internal.h
zstd/lib/deprecated/: zbuff.h
zstd/lib/dictBuilder/: cover.h
zstd/lib/legacy/: zstd_legacy.h  zstd_v05.h
